# apple-music-duplicate-finder

./: .bandit  .gitignore  .pylintrc  README.md  allowlist_manager.py  analyze_library.py  evaluate_duplicates.py  issues.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: bandit.yml  pylint.yml  security-scan.yml
tests/: __init__.py  test_main.py
