[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-music-duplicate-finder"
version = "1.0.0"
description = "A tool that analyzes Apple Music Library.XML exports to identify duplicate tracks with identical metadata but different or same file paths"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rick Kidder Jr", email = "rick@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "lxml>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/rekidderjr/apple-music-duplicate-finder"
Repository = "https://github.com/rekidderjr/apple-music-duplicate-finder.git"
Issues = "https://github.com/rekidderjr/apple-music-duplicate-finder/issues"

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "127"